fixed broken scroll from service section being too short

--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,6 @@ h1  {
 
 /* Services Carousel */
 .services-container{
-  height: 100vh;
   width: 100%;
   padding: 32px 0 0;
   overflow-x: hidden;
@@ -340,13 +339,15 @@ h2  {
   -webkit-text-fill-color: transparent;
   text-align: center;
   margin: 56px 0 24px;
-  
 }
 .service-list-container {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
+}
+.service-section  {
+  height: 360px;
 }
 .services-list{
   line-height: 2rem;
